@@ -1,3 +1,10 @@
+2008-06-20  Neal H. Walfield  <neal@gnu.org>
+
+	* ager.c: Include "pager.h".
+	(ager_loop): Consider total available memory as not MEMORY_TOTAL
+	but MEMORY_TOTAL - PAGER_LOW_WATER_MARK.  Improve debugging
+	output.
+
 2008-06-18  Neal H. Walfield  <neal@gnu.org>
 
 	* server.c (server_loop): Implement the cap_rubout method.
